# mitonet

./: .coverage  .gitignore  DATABASE_SCHEMA.md  INCREMENTAL_UPDATE_README.md  Makefile  README.md  TESTING_README.md  coverage.xml  demo.db  demo_incremental.py  main.py  mitonet.db  mitonet_summary_report.md  prompt.md  pyproject.toml  run_memory_optimized.py  run_pipeline.py  run_simplified.py  test_mitonet_edges.csv  test_mitonet_network.graphml  test_mitonet_network.json  test_mitonet_nodes.csv  test_mitonet_summary_report.md  test_phase6.py  test_runner.py
mitonet/: __init__.py  cli.py  database.py  export.py  ingestion.py
tests/: __init__.py  conftest.py
tests/integration/: test_demo_converted.py  test_incremental_workflow.py
tests/unit/: test_cli.py  test_database.py  test_export.py  test_ingestion.py
