[project]
name = "mitonet"
version = "0.2.0"
description = "Mitochondrial Network Integration Pipeline with incremental updates"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0", 
    "networkx>=3.0.0",
    "openpyxl>=3.1.0",
    "xlrd>=2.0.1",
    "psutil>=5.9.0",
    "sqlalchemy>=2.0.0",
    "click>=8.0.0"
]

[project.scripts]
mitonet = "mitonet.cli:cli"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
