[project]
name = "mitonet"
version = "0.2.0"
description = "Mitochondrial Network Integration Pipeline with incremental updates"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0", 
    "networkx>=3.0.0",
    "openpyxl>=3.1.0",
    "xlrd>=2.0.1",
    "psutil>=5.9.0",
    "sqlalchemy>=2.0.0",
    "click>=8.0.0"
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "pytest-click>=1.1.0"
]

[project.scripts]
mitonet = "mitonet.cli:cli"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
    "--tb=short",
    "--cov=mitonet",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--cov-report=xml"
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "database: marks tests that require database access",
    "cli: marks tests for CLI functionality"
]
